# dynamics-benchmark

./: .gitignore  README.md
benchmarker/: main.py  pyproject.toml
benchmarker/core/: case.py  instance.py  plotter.py  results_loader.py  save_utils.py
benchmarker/data/: time.json  time_august.json
benchmarker/scripts/: create_instances.py  plot_dynamics.py  plot_success_prob_by_ta.py  plot_tta_comparison.py  print_success_ratios.py  run_benchmark_tests.py  run_velox.py
cyclicycles/: README.md  dynamics_tts_1.10_no_ancilla.json  dynamics_tts_6.4_no_ancilla.json  main.py  plot_tta_comparison2.py  pyproject.toml  test_embedding_cache.py
cyclicycles/chain_break_visualizations/: chain_breaks_dynamics_1_timepoints_5.json  chain_breaks_dynamics_3_timepoints_5.json  chain_breaks_dynamics_8_timepoints_5.json
cyclicycles/chain_break_visualizations/problems/: README.md  __init__.py  draw_utils.py  examples.py  real_graphs.py
cyclicycles/data/: dynamics_tts_1_no_ancilla.json  time October.json  time.json  time_December.json
cyclicycles/data/embeddings/: 6.4_dynamics_3_timepoints_12.pkl
cyclicycles/scripts/: batch_cyclic_annealing.py  batch_cyclic_annealing.sh  batch_runner.py  calculate_tts.py  calculate_tts_all_cycles.py  check_spin_glass.py  cyclic_annealing.py  export_tts_data.py  forward_annealing.py  generate_spin_glass.py  plot_dynamics.py  plot_results.py  visualize_chain_breaks.py  visualize_with_inspector.py
cyclicycles/src/: bla.py
cyclicycles/zakaria/: dwave_cyclic_annealing.py  example.py  test_dwave_cyclic_annealing.py
(+5973 files in other folders)
