[tool.poetry]
name = "benchmarker"
version = "0.1.0"
description = "DWDynamics Benchmarker"
authors = ["Philipp Hanussek <p.hanussek@etu.sorbonne-universite.fr>"]
packages = [{include = "benchmarker", from = "../"}]


[tool.poetry.dependencies]
python = "^3.11"
dwdynamics = { path = "../dwdynamics", develop = true }
dwave-neal = "^0.6.0"
pandas = "^2.3.1"
numpy = "^2.3.2"
PyQt6 = "^6.9.1"
veloxq-sdk = {git = "https://github.com/quantumz-io/veloxq_sdk.git"}
dwave-inspector = "^0.5.5"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
